<resources>
    <string name="app_name">Events Reminder</string>
    <string name="dashboard_fragment_title">Список событий</string>
    <string name="menu_item_home_to_dashboard_title">Список событий</string>
    <string name="menu_item_settings_title">Настройки</string>
    <string name="menu_item_my_events_title">Мои события</string>
    <string name="settings_fragment_title">Настройки</string>
    <string name="my_events_fragment_title">Мои события</string>
    <string name="notifications_simple_channel_name">Общие уведомления</string>
    <string name="notifications_alarm_channel_name">Наступление событий</string>
    <string name="notifications_simple_channel_description">В этом канале выводятся уведомления общего характера</string>
    <string name="notifications_alarm_channel_description">В этом канале выводятся уведомления о наступлении событий</string>

    <!-- Preference Titles,Keys-->
    <string name="title_datasource_preference_category">Источники данных</string>
    <string name="title_data_sources_multiselect_list_preference">Источники данных</string>
    <string name="title_notification_settings_preference_category">Уведомления</string>
    <string name="title_widget_data_settings_preference_category">Виджет: отображение данных</string>
    <string name="title_event_date_checkbox_preference">Показывать дату события</string>
    <string name="key_event_date_checkbox_preference">event date</string>
    <string name="key_event_time_checkbox_preference">event time</string>
    <string name="title_event_time_checkbox_preference">Показывать время события</string>
    <string name="key_age_checkbox_preference">age</string>
    <string name="title_age_checkbox_preference">Показывать возраст именинника</string>
    <string name="widget_appearance_settings_preference_category">Виджет: внешний вид</string>
    <string name="title_export_settings_preference">Экспорт текущих настроек в файл</string>
    <string name="key_export_settings_preference">export_settings</string>
    <string name="title_import_settings_preference">Импорт сохранённых настроек из файла</string>
    <string name="key_import_settings_preference">import_settings</string>
    <string name="events_export">Экспорт локальных событий в файл</string>
    <string name="key_events_export">events_export</string>
    <string name="events_import">Импорт сохранённых событий из файла</string>
    <string name="key_events_import">events_settings</string>
    <string name="key_notification_start_time_preference">time_to_start_notification</string>
    <string name="title_notification_start_time_preference">Время срабатывания уведомления</string>
    <string name="key_minutes_before_notification_preference">minutes_before_notification</string>
    <string name="title_minutes_before_notification_preference">Минут до события</string>
    <string name="summary_minutes_before_notification_preference">За сколько минут до события выводить уведомление</string>
    <string name="key_widget_interval_of_events_preference">widget_interval_of_events</string>
    <string name="title_widget_interval_of_events_preference">Дней для показа событий</string>
    <string name="summary_widget_interval_of_events_preference">Выберите количество дней для показа событий</string>
    <string name="key_widget_font_size_preference">widget_font_size</string>
    <string name="title_widget_font_size_preference">Размер шрифта</string>
    <string name="key_background_color_preference">widget_background_color</string>
    <string name="title_background_color_preference">Цвет фона виджета</string>
    <string name="key_first_line_color_preference">widget_line1_color</string>
    <string name="title_first_line_color_preference">Цвет нечётных строк виджета</string>
    <string name="key_second_line_color_preference">widget_line2_color</string>
    <string name="title_second_line_color_preference">Цвет чётных строк виджета</string>
    <string name="key_phonebook_datasource_checkbox_preference">phonebook_datasource</string>
    <string name="title_phonebook_datasource_checkbox_preference">Телефонная книга</string>
    <string name="key_calendar_datasource_checkbox_preference">calendar_datasource</string>
    <string name="title_calendar_datasource_checkbox_preference">Календарь</string>
    <string name="title_show_event_interval_preference">Дней для показа событий</string>
    <string name="summary_show_event_interval_preference">Выберите количество дней для показа событий</string>
    <string name="key_show_events_interval_preference">interval for events</string>
    <string name="key_widget_birthday_font_color_preference">widget_font_color</string>
    <string name="title_widget_birthday_font_color_preference">Цвет дней рождений</string>
    <string name="key_widget_holiday_font_color_preference">widget_holiday_font_color</string>
    <string name="title_widget_holiday_font_color_preference">Цвет праздников</string>
    <string name="key_widget_simple_event_font_color_preference">widget_simple_event_font_color</string>
    <string name="title_widget_simple_event_font_color_preference">Цвет других событий</string>
    <string name="font_preference_category_title">Шрифт</string>
    <string name="background_preference_category_title">Фон</string>

    <string name="dashboard_recyclerview_content_description">Список карточек событий</string>
    <string name="dashboard_fab_content_description">Кнопка для добавления события</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="widget_item_preview_first_title">День Труда</string>
    <string name="widget_item_preview_first_days_to">Сегодня</string>
    <string name="widget_item_preview_first_date">(01.05)</string>
    <string name="widget_item_preview_first_time">03:00</string>
    <string name="widget_second_item_preview_title">Александр Сергеевич Пушкин</string>
    <string name="widget_second_item_preview_days_to">+36 дн.</string>
    <string name="widget_second_item_preview_date">(06.06)</string>
    <string name="widget_second_item_preview_age">(224, 1799 г.)</string>
    <string name="widget_third_item_preview_title">Иван Федорович Крузенштерн</string>
    <string name="widget_third_item_preview_days_to">+202 дн.</string>
    <string name="widget_third_item_preview_date">(19.11)</string>
    <string name="widget_third_item_preview_age">(253, 1770 г.)</string>
    <string name="widget_forth_item_preview_title">Запуск салюта!</string>
    <string name="widget_forth_item_preview_days_to">+245 дн.</string>
    <string name="widget_forth_item_preview_date">(01.01)</string>
    <string name="widget_forth_item_preview_time">03:00</string>
    <string name="widget_fontsize_toast">\"размер шрифта виджета \"</string>
    <string name="widget_border">Рамка</string>
    <string name="birthday_pattern">%d г.р.</string>
    <string name="key_widget_border_color">border_color</string>
    <string name="widget_border_color">Цвет рамки</string>
    <string name="key_widget_border_width">border_width</string>
    <string name="widget_border_width">Толщина рамки</string>
    <string name="key_widget_border_corners">border_corners</string>
    <string name="widget_border_corners">Закругление уголков</string>
    <string name="toast_text_for_settings_fragment_failed_to_get_preferences">failed to get preferences</string>
    <string name="toast_msg_create_birthday_dialog">Введите имя и дату</string>
    <string name="toast_msg_create_holiday_simple_dialog">Введите название и дату</string>
    <string name="description_contains_birthday_repoimpl">birthday</string>
    <string name="description_contains_day_of_birth_repoimpl">День рождения</string>
    <string name="toast_msg_double_back_pressure_btn">Нажмите НАЗАД для выхода</string>
    <string name="log_msg_rights_check_succeeded">Rights check succeeded</string>
    <string name="demands_dialog_title_first">Предоставьте права</string>
    <string name="demands_dialog_title_second">"Необходим доступ к "</string>
    <string name="demands_dialog_title_third">, пожалуйста, предоставьте Права либо измените Настройки приложения (уберите галочку в источниках данных)</string>
    <string name="toast_msg_failed_to_get_preferences">failed to get preferences</string>
    <string name="toast_msg_create_event_dialog">Выберите тип события</string>
    <string name="toast_msg_events_list_renewed">Список событий обновлён</string>
    <string name="create_event_dialog_choose_title">Тип события?</string>
    <string name="create_simple_event_dialog_title">Другое событие</string>
    <string name="create_holiday_dialog_title">Праздник</string>
    <string name="create_simple_event_dialog_edittext_hint">Описание события</string>
    <string name="dialog_backward_btn_text">Назад</string>
    <string name="dialog_forward_btn_text">Ок</string>
    <string name="create_birthday_dialog_title">День Рождения</string>
    <string name="create_birthday_dialog_edittext_hint">Кто именинник</string>
    <string name="radio_btn_title_birthday">День рождения</string>
    <string name="radio_btn_title_holiday">Праздник</string>
    <string name="radio_btn_title_simple_event">Другое</string>
    <string name="choose_event_type_dialog_cancel_btn_text">Отмена</string>
    <string name="choose_event_type_dialog_btn_next_text">Далее</string>
    <string name="checkbox_for_time_picker_text">Задать время</string>
    <string name="clear_local_events_btn_text">Удалить все события</string>
    <string name="delete_all_local_events_dialog_title">Удалить все события?</string>
    <string name="delete_local_events_dialog_positive_btn">Да</string>
    <string name="delete_local_events_dialog_negative_btn">Отмена</string>
    <string name="delete_local_event_dialog_title">Удалить событие</string>
    <string name="toast_delete_local_event_dialod">Событие удалено</string>
    <string name="event_type_birthday">День рождения</string>
    <string name="event_type_holiday">Праздник</string>
    <string name="event_type_simple_event">запланированное событие</string>
    <string name="empty_local_events_textview_text">Событий пока нет</string>
    <string name="edit_holiday_dialog_edittext_hint">Название праздника</string>
    <string name="birthday_dialog_checkbox_text">Без года рождения</string>
    <string name="fifth_widget_preview_item_days_to">+366 дн.</string>
    <string name="fifth_widget_preview_item_date">(01.05)</string>
    <string name="client_id">1036319382432-k74da1rcnkgu12jr8nq9csda8cb6nrb1.apps.googleusercontent.com</string>
    <string name="repeat_once_a">Повторять раз в</string>
    <string name="key_widget_appearance_by_default">widget_appearance_by_default</string>
    <string name="toast_msg_settings_load_successfully">Настройки загружены</string>
    <string name="toast_msg_current_settings_saved">Настройки сохранены</string>
    <string name="toast_msg_events_saved">События сохранены</string>
    <string name="toast_msg_events_loaded">События загружены</string>
    <string name="export_import_settings_preference_category_title">Сохранение настроек</string>
    <string name="export_import_events_category_title">Сохранение локальных событий</string>
    <string name="notification_title">Events Reminder работает</string>
</resources>