<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home_24dp"
        android:menuCategory="secondary"
        android:title="@string/menu_item_home_to_dashboard_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/myEventsFragment"
        android:icon="@drawable/icon_edit_my_event_24"
        android:title="@string/menu_item_my_events_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/menu_item_settings_title"
        app:showAsAction="ifRoom" />
</menu>