<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/event_dialogs_inner_padding">

    <TextView
        android:id="@+id/titleChooseNewEventType"
        style="@style/edit_events_dialogs_title"
        android:text="@string/create_event_dialog_choose_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupChooseNewEventType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleChooseNewEventType">

        <RadioButton
            android:id="@+id/radiobtnBirthday"
            style="@style/create_event_radio_btn"
            android:text="@string/radio_btn_title_birthday" />

        <RadioButton
            android:id="@+id/radiobtnHoliday"
            style="@style/create_event_radio_btn"
            android:text="@string/radio_btn_title_holiday" />

        <RadioButton
            android:id="@+id/radiobtnAnotherType"
            style="@style/create_event_radio_btn"
            android:text="@string/radio_btn_title_simple_event" />
    </RadioGroup>

    <LinearLayout
        style="@style/edit_events_dialogs_btn_linearlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupChooseNewEventType">

        <Button
            android:id="@+id/negativeBtnChooseNewEventType"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:backgroundTint="@color/transparent_btn_background_tint"
            android:text="@string/choose_event_type_dialog_cancel_btn_text"
            android:textSize="@dimen/dialog_btns_textsize" />

        <Button
            android:id="@+id/positiveBtnChooseNewEventType"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:backgroundTint="@color/transparent_btn_background_tint"
            android:text="@string/choose_event_type_dialog_btn_next_text"
            android:textSize="@dimen/dialog_btns_textsize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>