<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/edit_events_dialogs_linearlayout">

    <TextView
        android:id="@+id/titleCreateHolidayEvent"
        style="@style/edit_events_dialogs_title"
        android:text="@string/create_holiday_dialog_title" />

    <EditText
        android:id="@+id/inputEventNameEditText"
        style="@style/edit_event_dialogs_edittext"
        android:hint="@string/edit_holiday_dialog_edittext_hint" />

    <DatePicker
        android:id="@+id/inputHolidayDatePicker"
        style="@style/edit_event_dialog_date_picker"
        android:theme="@style/date_picker" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <CheckBox
                android:id="@+id/isTimePickerEnabled"
                style="@style/dialog_checkbox_to_enable_time_picker"
                android:text="@string/checkbox_for_time_picker_text" />

            <TextView
                android:id="@+id/inputHolidayTime"
                style="@style/input_event_time_textview"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <CheckBox
                android:id="@+id/isHolidayPeriodEnabled"
                style="@style/dialog_checkbox_to_enable_time_picker"
                android:text="@string/repeat_once_a" />

            <Spinner
                android:id="@+id/holidayPeriodValueSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:visibility="invisible"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/edit_events_dialogs_btn_linearlayout">

        <Button
            android:id="@+id/negativeBtnCreateHolidayEvent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent_btn_background_tint"
            android:text="@string/dialog_backward_btn_text"
            android:textSize="@dimen/dialog_btns_textsize" />

        <Button
            android:id="@+id/positiveBtnCreateHolidayEvent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent_btn_background_tint"
            android:text="@string/dialog_forward_btn_text"
            android:textSize="@dimen/dialog_btns_textsize" />
    </LinearLayout>
</LinearLayout>